--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "task_1",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "task_1.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node task_2.js",
+    "dev": "nodemon task_2.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "caesar-salad": "^2.1.0",
     "express": "^4.19.2"
   },
   "devDependencies": {
