--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "task_1.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node task_2.js",
-    "dev": "nodemon task_2.js"
+    "task1": "nodemon task_1.js",
+    "task2": "nodemon task_2.js"
   },
   "keywords": [],
   "author": "",
